# temp

MATH_5/MATH/: CMakeCache.txt  CMakeLists.txt  Make.inc  Makefile  build.sh  cmake_install.cmake  main.c
MATH_5/MATH/aarch64/: fenv.c
MATH_5/MATH/amd64/: bsd_asm.h  bsd_fpu.h  bsd_ieeefp.h  fenv.c
MATH_5/MATH/arm/: fenv.c
MATH_5/MATH/coverage_report/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
MATH_5/MATH/coverage_report/home/xiaobai/MATH_3/MATH/amd64/: fenv.c.func-sort-c.html  fenv.c.func.html  fenv.c.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
MATH_5/MATH/coverage_report/home/xiaobai/MATH_3/MATH/include/: MATH_fenv_amd64.h.func-sort-c.html  MATH_fenv_amd64.h.func.html  MATH_fenv_amd64.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
MATH_5/MATH/coverage_report/home/xiaobai/MATH_3/MATH/src/: common.c.func-sort-c.html  common.c.func.html  common.c.gcov.html  e_asin.c.func-sort-c.html  e_asin.c.func.html  e_asin.c.gcov.html  e_fmod.c.func-sort-c.html  e_fmod.c.func.html  e_fmod.c.gcov.html  e_rem_pio2.c.func-sort-c.html  e_rem_pio2.c.func.html  e_rem_pio2.c.gcov.html  e_remainder.c.func-sort-c.html  e_remainder.c.func.html  e_remainder.c.gcov.html  e_sqrt.c.func-sort-c.html  e_sqrt.c.func.html  e_sqrt.c.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  k_cos.c.func-sort-c.html  k_cos.c.func.html  k_cos.c.gcov.html  k_rem_pio2.c.func-sort-c.html  k_rem_pio2.c.func.html  k_rem_pio2.c.gcov.html  k_sin.c.func-sort-c.html  k_sin.c.func.html  k_sin.c.gcov.html  k_tan.c.func-sort-c.html  k_tan.c.func.html  k_tan.c.gcov.html  s_copysign.c.func-sort-c.html  s_copysign.c.func.html  s_copysign.c.gcov.html  s_cos.c.func-sort-c.html  s_cos.c.func.html  s_cos.c.gcov.html  (+75 more)
MATH_5/MATH/ft2000/: fenv.c
MATH_5/MATH/include/: MATH.h  MATH_defs.h  MATH_fenv.h  MATH_fenv_amd64.h  MATH_fenv_arm.h  MATH_fenv_ft2000.h  MATH_fenv_i387.h  MATH_fenv_loongarch64.h  MATH_fenv_mips.h  MATH_fenv_powerpc.h  MATH_fenv_riscv.h  MATH_fenv_s390.h  MATH_math.h
MATH_5/MATH/loongarch64/: CMakeCache.txt
MATH_5/MATH/mips/: fenv-softfloat.h  fenv.c
MATH_5/MATH/powerpc/: fenv.c
MATH_5/MATH/riscv64/: fenv.c
MATH_5/MATH/s390/: Make.files  fenv.c
MATH_5/MATH/src/: Make.files  ULPs  aarch64_fpmath.h  amd64_fpmath.h  bsd_cdefs.h  cdefs-compat.h  common.c  e_acos.c  e_asin.c  e_atan2.c  e_cosh.c  e_exp.c  e_fmod.c  e_log.c  e_log10.c  e_pow.c  e_rem_pio2.c  e_remainder.c  e_sinh.c  e_sqrt.c  fpmath.h  i386_fpmath.h  isNormal.c  k_cos.c  k_exp.c  k_log.h  k_rem_pio2.c  k_sin.c  k_tan.c  math_private.h  math_private_openbsd.h  s_atan.c  s_ceil.c  s_copysign.c  s_cos.c  s_expm1.c  s_fabs.c  s_fdim.c  s_floor.c  s_fmax.c  (+25 more)
MATH_5/MATH/test/: CMakeCache.txt  CMakeLists.txt  MATH_TEST  Makefile  ULPs  build.sh  cmake_install.cmake  libm-bench.cpp  test-double.c
MATH_5/MATH/test/temp_makefile/: Makefile
